# Assembly-Line-Simulator

./: .dockerignore  .gitignore  CMakeLists.txt  DEPLOYMENT.md  DEPLOYMENT_COMPLETE.md  DEPLOY_BACKEND_FIRST.md  Dockerfile  FIX_VERCEL_BUILD.md  FREE_HOSTING.md  FRONTEND_BACKEND_CONNECTION.md  LICENSE  Makefile  PROJECT_ORGANIZATION.md  QUICK_DEPLOY.md  QUICK_START_HYBRID.md  README_HYBRID.md  RUNNING_STATUS.md  TROUBLESHOOTING.md  VERCEL_DEPLOY_STEPS.md  VERCEL_SETUP.md  docker-compose.yml  fly.toml  readme.md  test-backend-connection.sh  test-connection.html
.github/workflows/: ci.yml  deploy-fly.yml  fly-deploy.yml
Assembly-Line-Simulator-main/src/: CustomerOrder.cpp  CustomerOrder.h  LineManager.h  Station.h  Workstation.cpp  tester_1.cpp
api/: README.md  main.py  requirements.txt
config/: config.txt
deploy/: VERCEL_FLYIO.md  railway.md  render.md  vps.md
docs/: FIX_STATS_UPDATE.md  HANDLING_DOUBLE_CLICKS.md  HOW_RUN_SIMULATION_WORKS.md  README.md  reflect.txt
docs/architecture/: TECH_STACK_RECOMMENDATION.md
docs/guides/: FOLDER_STRUCTURE.md  PROJECT_STRUCTURE.md  QUICK_START.md  STRUCTURE_SUMMARY.md
docs/planning/: BUILD_AND_EXPAND.md  EXPANSION_PLAN.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_STATUS.md  WHAT_ARE_WE_BUILDING.md
frontend/: README.md  index.html  package.json
frontend/src/: App.css  App.tsx  index.css  vite-env.d.ts
frontend/src/components/: Dashboard.tsx  Orders.tsx  Stations.tsx  Statistics.tsx
include/seneca/: APIServer.h  Config.h  CustomerOrder.h  Database.h  Exceptions.h  LineManager.h  Logger.h  Station.h  Utilities.h  Workstation.h
src/: CustomerOrder.cpp  LineManager.cpp  Station.cpp  Utilities.cpp  Workstation.h  main.cpp
src/core/: CustomerOrder.cpp  LineManager.cpp  Station.cpp  Utilities.cpp  Workstation.cpp
src/infrastructure/: Config.cpp  Database.cpp  Logger.cpp
tests/: tester_1.cpp  tester_2.cpp  tester_3.cpp
